# coder_detector

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
coder_detector/ml_pipeline/: serving.py
coder_detector/service/: main.py
